Routing logic is almost done

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-link">
           <div class="nav-profile-text myListItem">
-            <a href="/login" routerLink='/login'>Card Replacment</a>
+            <a href="#" routerLink='/login'>Card Replacment</a>
           </div>
         </li>
         <li class="nav-link">
@@ -36,7 +36,7 @@
             <a>PIN</a>
           </div>
         </li>
-        <li><a href=""  >Card afsasfasfaReplacment</a></li>
+
       </ul>
 
       <ul class="navbar-nav navbar-nav-right">
