--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -17,26 +17,20 @@
               <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
             </div>
             <div class="mt-3">
-              <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" routerLink="/home">SIGN IN</a>
+              <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" routerLink="/">SIGN IN</a>
             </div>
             <div class="my-2 d-flex justify-content-between align-items-center">
               <div class="form-check">
                 <label class="form-check-label text-muted">
-                  <input type="checkbox" class="form-check-input">
+                  <!---input type="checkbox" class="form-check-input">
                   <i class="input-helper"></i>
-                  Keep me signed in
+                  Keep me signed in -->
                 </label>
               </div>
-              <a href="javascript:(void)" class="auth-link text-black">Forgot password?</a>
+              <!---a href="javascript:(void)" class="auth-link text-black">Forgot password?</a> -->
             </div>
-            <div class="mb-2">
-              <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                <i class="mdi mdi-facebook mr-2"></i>Connect using facebook
-              </button>
-            </div>
-            <div class="text-center mt-4 font-weight-light">
-              Don't have an account? <a routerLink="/register" class="text-primary">Create</a>
-            </div>
+
+
           </form>
         </div>
       </div>
