--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -11,13 +11,14 @@
 
           <form class="pt-3">
             <div class="form-group">
-              <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
+              <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username" [(ngModel)]="username" name="username">
             </div>
             <div class="form-group">
-              <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="password" name="password">
             </div>
             <div class="mt-3">
-              <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" routerLink="/">SIGN IN</a>
+              <!---a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" (click)="fun()" routerLink="#">SIGN IN</a-->
+              <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"  routerLink="/"  (click)="login()" >SIGN IN</a>
             </div>
             <div class="my-2 d-flex justify-content-between align-items-center">
               <div class="form-check">
