--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="mt-3">
               <!---a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" (click)="fun()" routerLink="#">SIGN IN</a-->
-              <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"  routerLink="/"  (click)="login()" >SIGN IN</a>
+              <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"  (click)="login()" >SIGN IN</a>
             </div>
             <div class="my-2 d-flex justify-content-between align-items-center">
               <div class="form-check">
