--- a/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
+++ b/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
@@ -1,2 +1,34 @@
 <app-header></app-header>
-<p>issue works!</p>
+
+
+
+<div class="card-center">
+     <mat-card class="example-card">
+
+    <mat-card-content>
+        <form class="example-form">
+            <mat-form-field class="example-full-width">
+              <mat-label>Email</mat-label>
+              <input matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+                     placeholder="Ex. pat@example.com">
+              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                Please enter a valid email address
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="example-full-width">
+                <input matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+                placeholder="Ex. pat@example.com">
+                </mat-form-field>
+
+          </form>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Add</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
+ 
