--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 //@import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import './assets/scss/variables';
