--- a/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
+++ b/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
@@ -1,13 +1,18 @@
+
+
+
+<div fxLayout="column" fxLayoutGap="100px">
 <app-header></app-header>
 
 
-
 <div class="card-center">
-     <mat-card class="example-card">
-
+  
+     <mat-card >
+      <mat-tab-group>
+        <mat-tab label="Customer Details"> 
     <mat-card-content>
-        <form class="example-form">
-            <mat-form-field class="example-full-width">
+        <form class="cts-form">
+            <mat-form-field class="cts-full-width">
               <mat-label>Email</mat-label>
               <input matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
                      placeholder="Ex. pat@example.com">
@@ -19,7 +24,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field class="example-full-width">
+            <mat-form-field class="cts-full-width">
                 <input matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
                 placeholder="Ex. pat@example.com">
                 </mat-form-field>
@@ -29,6 +34,18 @@
     <mat-card-actions>
       <button mat-button>Add</button>
     </mat-card-actions>
+
+    
+   </mat-tab>
+    <mat-tab label="Application" disabled={{AppicationTabFlag}}>
+      
+        Content 1
+   
+    </mat-tab>
+  </mat-tab-group>
   </mat-card>
-</div>
  
+  
+</div>
+
+</div>
