--- a/src/app/modules/issuance/PTS_issue/PTS_issue.component.scss
+++ b/src/app/modules/issuance/PTS_issue/PTS_issue.component.scss
@@ -2,7 +2,7 @@
 
 .cts-form {
     min-width: 150px;
-    max-width: 500px;
+    max-width: 450px;
     width: 100%;
   }
   
@@ -10,8 +10,8 @@
     width: 100%;
   }
 
-  .example-card {
-    max-width: 1500px;
+  .cts-card {
+    max-width: 100px;
     
   }
 
@@ -31,3 +31,9 @@
     object-position: center;
   }
   
+  .cts-title {
+    // max-width: 50px;
+    // min-width: 50px;
+    width: 55px;
+  }
+
