--- a/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
+++ b/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
@@ -7,17 +7,17 @@
 
 <div class="card-center">
      <mat-card >
-      <mat-tab-group>
+      <mat-tab-group [(selectedIndex)]="Tab">
         <mat-tab label="Customer Details"> 
     <mat-card-content>
 
 
-        <form class="cts-form">
+        <form class="cts-form" (ngSubmit)="addCustomer()" [formGroup]="customerForm" >
           <div fxLayout="row" fxLayoutGap="10px">
             <mat-form-field class="cts-id-row">
     
               <mat-label>Customer ID</mat-label>
-              <input #customer_id maxlength="7" matInput [formControl]="IDFormControl" [errorStateMatcher]="IDmatcher"
+              <input #customer_id maxlength="7" matInput formControlName="IDFormControl" [errorStateMatcher]="IDmatcher"
                      placeholder="Ex. 1000999"  >
               <mat-error *ngIf="IDFormControl.hasError('email') && !IDFormControl.hasError('required')">
                 Please enter a valid Customer ID
@@ -28,28 +28,21 @@
               <mat-hint align="end">{{customer_id.value?.length || 0}}/7</mat-hint>
             </mat-form-field>
 
-            <button mat-flat-button color="primary" class="cts-button-row" (click)="getCustomer()">Search</button>
+            <button mat-flat-button color="primary" class="cts-button-row" type="button" (click)="getCustomer()">Search</button>
           </div>
             <mat-form-field >
               <mat-label> Gender </mat-label>
-              <mat-select value="M" required >
+              <mat-select value="M" required formControlName="genderFormcontrol" >
                 <mat-option value="M">Male</mat-option>
                 <mat-option value="F">Female</mat-option>
               </mat-select>
 
             </mat-form-field>
 
-
-
-
-
-
-
-
             <div fxLayout="row" fxLayoutGap="10px">
               <mat-form-field class="cts-title" >
                 <mat-label> Title </mat-label>
-                <mat-select>
+                <mat-select value="1" formControlName="titeFormcontrol" >
                   <mat-option value="1">Mr.</mat-option>
                   <mat-option value="2">Mrs.</mat-option>
                   <mat-option value="3">Miss.</mat-option>
@@ -59,7 +52,7 @@
 
               <mat-form-field class="cts-full-width">
                 <mat-label>First Name</mat-label>
-                <input matInput [formControl]="firstNameFormControl" [errorStateMatcher]="firstNameMatcher"
+                <input matInput formControlName="firstNameFormControl" [errorStateMatcher]="firstNameMatcher"
                        placeholder="Ex. Muhammad">
                 <mat-error *ngIf="firstNameFormControl.hasError('required')">
                   First Name is <strong>required</strong>
@@ -74,7 +67,7 @@
 
             <mat-form-field class="cts-full-width">
               <mat-label>Last Name</mat-label>
-              <input matInput [formControl]="lastNameFormControl" [errorStateMatcher]="lastNameMatcher"
+              <input matInput formControlName="lastNameFormControl" [errorStateMatcher]="lastNameMatcher"
                      placeholder="Ex. Tellesy">
               <mat-error *ngIf="lastNameFormControl.hasError('required')">
                 Last Name is <strong>required</strong>
@@ -87,7 +80,7 @@
 
             <mat-form-field class="cts-full-width">
               <mat-label>Embossed Name</mat-label>
-              <input matInput #embossed_name maxlength="26" [formControl]="embossedNameFormControl" [errorStateMatcher]="embossedMatcher"
+              <input matInput #embossed_name maxlength="26" formControlName="embossedNameFormControl" [errorStateMatcher]="embossedMatcher"
                      placeholder="Ex. Muhammad Tellesy">
        
               <mat-error *ngIf="embossedNameFormControl.hasError('required')">
@@ -105,7 +98,7 @@
             
             <mat-form-field class="cts-full-width">
               <mat-label>National ID</mat-label>
-              <input  #NID maxlength="15" matInput [formControl]="NIDFormControl" [errorStateMatcher]="NIDMatcher"
+              <input  #NID maxlength="15" matInput formControlName="NIDFormControl" [errorStateMatcher]="NIDMatcher"
                      placeholder="Ex. 119920000000000">
               <mat-error *ngIf="NIDFormControl.hasError('required')">
                 National ID is <strong>required</strong>
@@ -113,13 +106,13 @@
               <mat-error *ngIf="NIDFormControl.hasError('maxlength') || NIDFormControl.hasError('minlength') ">
                 Enter Valid NID
               </mat-error>
-              <mat-hint align="end">{{NID.value?.length || 0}}/15</mat-hint>
+              <mat-hint align="end">{{NID.value?.length || 0}}/12</mat-hint>
             </mat-form-field>
           
 
             <mat-form-field class="cts-full-width">
               <mat-label>Email</mat-label>
-              <input matInput [formControl]="emailFormControl" [errorStateMatcher]="emailMatcher"
+              <input matInput formControlName="emailFormControl" [errorStateMatcher]="emailMatcher"
                      placeholder="mtellesy@gmail.com">
               <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
                 Please enter a valid Email
@@ -134,14 +127,14 @@
 
               <mat-form-field class="cts-title">
                 <mat-label> ISD </mat-label>
-                <mat-select required value="1">
-                  <mat-option value="1">+218</mat-option>
+                <mat-select required formControlName="ISDFormcontrol"  value="+218">
+                  <mat-option value="+218">+218</mat-option>
                 </mat-select>
     
               </mat-form-field>
             <mat-form-field class="cts-full-width">
               <mat-label>Mobile Number</mat-label>
-              <input matInput [formControl]="mobileFormControl" [errorStateMatcher]="mobileMatcher"
+              <input matInput formControlName="mobileFormControl" [errorStateMatcher]="mobileMatcher"
                      placeholder="Ex. 911000000">
               <mat-error *ngIf="mobileFormControl.hasError('required')">
                 Mobile Phone is <strong>required</strong>
@@ -157,7 +150,7 @@
             <div>
             <mat-form-field >
               <mat-label > Nationality </mat-label>
-              <mat-select value="434" required >
+              <mat-select value="434" required formControlName="nationalFormcontrol" >
                 <mat-option value="434" >Libyan</mat-option>
               </mat-select>
              
@@ -169,14 +162,14 @@
           <div fxLayout="row" fxLayoutGap="10px">
             <mat-form-field >
               <mat-label > Birth Country </mat-label>
-              <mat-select value="434" required >
+              <mat-select value="434" required  formControlName="birthCountryFormcontrol"  >
                 <mat-option value="434">Libya</mat-option>
               </mat-select>
             </mat-form-field>
 
             <mat-form-field class="cts-full-width">
               <mat-label>Birthdate</mat-label>
-              <input matInput [matDatepicker]="picker">
+              <input matInput [matDatepicker]="picker" formControlName="birthDateFormControl">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
             </mat-form-field>
@@ -186,7 +179,7 @@
             
               <mat-form-field class="cts-full-width">
                 <mat-label>Passport Number</mat-label>
-                <input matInput [formControl]="passportFormControl" [errorStateMatcher]="passportMatcher"
+                <input matInput formControlName="passportFormControl" [errorStateMatcher]="passportMatcher"
                        placeholder="Ex. KK45232">
                 <mat-error *ngIf="passportFormControl.hasError('required')">
                   Passport Number is <strong>required</strong>
@@ -199,18 +192,29 @@
 
             <mat-form-field  class="cts-full-width">
               <mat-label>Exp Date</mat-label>
-              <input matInput [matDatepicker]="passportExpDate">
+              <input matInput [matDatepicker]="passportExpDate" formControlName="expDateFormControl" >
               <mat-datepicker-toggle matSuffix [for]="passportExpDate"></mat-datepicker-toggle>
               <mat-datepicker #passportExpDate startView="year" [startAt]="startDate"></mat-datepicker>
             </mat-form-field>
           </div>
 
+          <mat-card-actions>
+            <div fxLayout="column" fxLayoutGap="100px" class="cts-customer-button">
+                 <button mat-flat-button color="primary" style="width: 100px;" type="submit">Add</button>
+            </div>
+          </mat-card-actions>
 
           </form>
+          
     </mat-card-content>
 
+
     
+  
    </mat-tab>
+
+
+   <!--Second tab-->
     <mat-tab label="Application" disabled={{AppicationTabFlag}}>
       <mat-card-content>
         <form class="cts-form">
@@ -227,7 +231,7 @@
 
       <mat-form-field class="cts-full-width">
         <mat-label>Account Number</mat-label>
-        <input matInput [formControl]="accountNumberFormControl" [errorStateMatcher]="accountNumberMatcher"
+        <input matInput #accountNumber formControlName="accountNumberFormControl" [errorStateMatcher]="accountNumberMatcher"
                placeholder="Ex. 199999984008049" [value]="IDFormControl.value + '840'">
         <mat-error *ngIf="accountNumberFormControl.hasError('required')">
           Account Number is <strong>required</strong>
@@ -237,6 +241,7 @@
         </mat-error>
         <mat-error *ngIf="accountNumberFormControl.hasError('pattern')">Account Number should only contain numbers</mat-error>
         <mat-error *ngIf="accountNumberFormControl.hasError('accountNumber')">Wrong Account Currency Code</mat-error>
+        <mat-hint align="end">{{accountNumber.value?.length || 0}}/15</mat-hint>
 
       </mat-form-field>
       <div>
