Customer Add and Get is working

--- a/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
+++ b/src/app/modules/issuance/PTS_issue/PTS_issue.component.html
@@ -200,7 +200,9 @@
 
           <mat-card-actions>
             <div fxLayout="column" fxLayoutGap="100px" class="cts-customer-button">
-                 <button mat-flat-button color="primary" style="width: 100px;" type="submit">Add</button>
+                 <button mat-flat-button color="primary" style="width: 100px;" type="submit">
+                  {{SubmitButtonText}}
+                </button>
             </div>
           </mat-card-actions>
 
